alignment fixed

--- a/Arya Bhattacharyya/styles/midpage.scss
+++ b/Arya Bhattacharyya/styles/midpage.scss
@@ -72,7 +72,7 @@ body {
         }
 
         .number {
-            margin-left: 50px;
+            margin-left: 53px;
         }
 
         .text {
